--- a/about.html
+++ b/about.html
@@ -21,8 +21,7 @@
 
 <body>
 
-
-    <!-- Sidans Header  -->
+    <!-- Sidans Header Meny  -->
     <div class="header">
         <div id="wrapperIcon">
             <img id="menuIcon" src="list.png" alt="menu">
@@ -39,7 +38,8 @@
             <li class="dropdownLi"><a class="dropdownA" href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
-    <!-- Drop down Meny - Dator -->
+
+    <!-- Drop down Meny - Full Res -->
     <div id="wrapperDropdownDesktop" class="hidden">
         <ul id="dropdownUlDesktop">
             <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="grupparbete.html">Hem</a></li>
@@ -48,12 +48,16 @@
             <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
+
+    <!-- Sidans kropp -->
     <div class="main">
+        
         <div id="aboutHeader">
             <h1>
                 Om oss
             </h1>
         </div>
+
         <div id="aboutDiv">
             <p class="aboutText">
                 Denna grupp består av <b>Noel</b>, <b>Anton</b>, <b>André</b> och <b>Victor</b>.
@@ -69,8 +73,6 @@
                 Är du intresserad av vad respektive gruppmedlem har att erbjuda? Klicka då gärna in på våra personliga
                 sidor
                 via knapparna under.
-
-
             </p>
         </div>
 
@@ -80,12 +82,14 @@
                 <li class="namesItem" id="name2">Victor Hultqvist</li>
                 <li class="namesItem" id="name3">André Rehnström</li>
                 <li class="namesItem" id="name4">Anton Lyrberg</li>
-
             </ul>
         </div>
+
     </div>
+
     <!-- Script ready(function(){}); -->
     <script src="aboutscript.js"></script>
+
 </body>
 
 </html>
