--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
     <title>Grupp 22</title>
@@ -20,11 +20,11 @@
 </head>
 
 <body class="body">
+
     <!-- Sidans Header -->
     <div class="header">
         <div id="wrapperIcon">
             <img id="menuIcon" src="list.png" alt="menu">
-            <!-- <img id="menuIcon" src="menuIcon.jpg" alt="menu"> -->
 
         </div>
     </div>
@@ -46,42 +46,42 @@
         </ul>
     </div>
 
-<div class="main">
-    <div class="contactForm">
-        <form name="form" action=" " onsubmit="validateForm()">
+    <div class="main">
+        <div class="contactForm">
+            <form name="form" action=" " onsubmit="validateForm()">
 
-            <label for="fname">Förnamn</label>
-            <input type="text" id="fname" name="firstname">
+                <label for="fname">Förnamn</label>
+                <input type="text" id="fname" name="firstname">
 
-            <label for="lname">Efternamn</label>
-            <input type="text" id="lname" name="lastname">
+                <label for="lname">Efternamn</label>
+                <input type="text" id="lname" name="lastname">
 
-            <label for="email">Epost</label>
-            <input type="text" id="email" name="email">
+                <label for="email">Epost</label>
+                <input type="text" id="email" name="email">
 
-            <label for="phone">Telefonnummer</label>
-            <input type="text" id="phone" name="phone">
+                <label for="phone">Telefonnummer</label>
+                <input type="text" id="phone" name="phone">
 
-            <label for="textArea">Ditt ärende</label>
-            <textarea id="textArea" name="textArea" placeholder="Skriv något om ditt ärende..."
-                style="height:200px"></textarea>
+                <label for="textArea">Ditt ärende</label>
+                <textarea id="textArea" name="textArea" placeholder="Skriv något om ditt ärende..."
+                    style="height:200px"></textarea>
 
-            <label for="contact">Hur vill du helst bli kontaktad?</label>
-            <select id="contact" name="contact">
-                <option value="phone">Telefon</option>
-                <option value="email">Epost</option>
-            </select>
-            <div class="alert">
-                <input type="submit" value="Skicka">
+                <label for="contact">Hur vill du helst bli kontaktad?</label>
+                <select id="contact" name="contact">
+                    <option value="phone">Telefon</option>
+                    <option value="email">Epost</option>
+                </select>
+                <div class="alert">
+                    <input type="submit" value="Skicka">
 
-            </div>
+                </div>
 
 
-        </form>
+            </form>
+        </div>
+
     </div>
 
-</div>
-    <!-- Script ready(function(){}); -->
     <script src="contactscript.js"></script>
 </body>
 
