--- a/grupparbete.html
+++ b/grupparbete.html
@@ -56,7 +56,7 @@
         </ul>
     </div>
 
-    <!-- Sidans "Kropp" -->
+    <!-- Sidans Kropp -->
     <div class="main">
 
         <!-- Titel -->
@@ -67,7 +67,6 @@
             <img id="novahuset" src="novahuset.jpg">
         </div>
 
-
         <!-- Text Information -->
         <div id="textDiv">
             <p id="frontpageText">
@@ -77,10 +76,8 @@
             </p>
         </div>
 
-        <!-- Slut på Kroppen -->
     </div>
 
-    <!-- Script ready(function(){}); -->
     <script src="homepagescript.js"></script>
 
 </body>
