--- a/victor.html
+++ b/victor.html
@@ -56,62 +56,59 @@
                 sapien. Nunc gravida enim nec felis.</p><br>
             <hr /><br>
         </div>
-        <!-- ------------------------ -->
-        <div class="skillsWrapper">
-            <h2 class="skillH2">Kunskaper</h2>
-            <div class="skillBox">
-                <p>Java</p>
-                <p>40%</p>
-                <div class="skill">
-                    <div class="skillLevel forty"></div>
-                </div>
-            </div>
-            <div class="skillBox">
-                <p>HTML</p>
-                <p>20%</p>
-                <div class="skill">
-                    <div class="skillLevel twenty">
-
-                    </div>
-                </div>
-            </div>
-            <div class="skillBox">
-                <p>CSS</p>
-                <p>30%</p>
-                <div class="skill">
-                    <div class="skillLevel thirty">
-
-                    </div>
-                </div>
-            </div>
-            <div class="skillBox">
-                <p>MySQL</p>
-                <p>70%</p>
-                <div class="skill">
-                    <div class="skillLevel seventy">
-
-                    </div>
-                </div>
-            </div>
-            <div class="skillBox">
-                <p>Adobe Photoshop</p>
-                <p>70%</p>
-                <div class="skill">
-                    <div class="skillLevel seventy">
-
-                    </div>
-                </div>
-            </div>
-            <div class="skillBox">
-                <p>Adobe Premiere</p>
-                <p>80%</p>
-                <div class="skill">
-                    <div class="skillLevel eighty">
-
-                    </div>
-                </div>
+        
+       <!-- Färdigheter -->
+       <div class="skillsWrapper">
+        <h2 class="skillH2">Kunskaper</h2>
+        <div class="skillBox">
+            <p>Java</p>
+            <p>40%</p>
+            <div class="skill">
+                <div class="skillLevel forty"></div>
             </div>
         </div>
+
+        <div class="skillBox">
+            <p>HTML</p>
+            <p>20%</p>
+            <div class="skill">
+                <div class="skillLevel twenty"></div>
+            </div>
+        </div>
+
+        <div class="skillBox">
+            <p>CSS</p>
+            <p>30%</p>
+            <div class="skill">
+                <div class="skillLevel thirty"></div>
+            </div>
+        </div>
+
+        <div class="skillBox">
+            <p>MySQL</p>
+            <p>70%</p>
+            <div class="skill">
+                <div class="skillLevel seventy"></div>
+            </div>
+        </div>
+
+        <div class="skillBox">
+            <p>Adobe Photoshop</p>
+            <p>70%</p>
+            <div class="skill">
+                <div class="skillLevel seventy"></div>
+            </div>
+        </div>
+
+        <div class="skillBox">
+            <p>Adobe Premiere</p>
+            <p>80%</p>
+            <div class="skill">
+                <div class="skillLevel eighty"></div>
+            </div>
+        </div>
+    </div>
+
     <script src="homepagescript.js"></script>
 </body>
 
