--- a/noel.html
+++ b/noel.html
@@ -24,7 +24,6 @@
     <div class="header">
         <div id="wrapperIcon">
             <img id="menuIcon" src="list.png" alt="menu">
-            <!-- <img id="menuIcon" src="menuIcon.jpg" alt="menu"> -->
         </div>
     </div>
 
@@ -57,7 +56,8 @@
                 sapien. Nunc gravida enim nec felis.</p><br>
             <hr /><br>
         </div>
-        <!-- ------------------------ -->
+        
+        <!-- Färdigheter -->
         <div class="skillsWrapper">
             <h2 class="skillH2">Kunskaper</h2>
             <div class="skillBox">
@@ -67,52 +67,48 @@
                     <div class="skillLevel forty"></div>
                 </div>
             </div>
+
             <div class="skillBox">
                 <p>HTML</p>
                 <p>20%</p>
                 <div class="skill">
-                    <div class="skillLevel twenty">
-
-                    </div>
+                    <div class="skillLevel twenty"></div>
                 </div>
             </div>
+
             <div class="skillBox">
                 <p>CSS</p>
                 <p>30%</p>
                 <div class="skill">
-                    <div class="skillLevel thirty">
-
-                    </div>
+                    <div class="skillLevel thirty"></div>
                 </div>
             </div>
+
             <div class="skillBox">
                 <p>MySQL</p>
                 <p>70%</p>
                 <div class="skill">
-                    <div class="skillLevel seventy">
-
-                    </div>
+                    <div class="skillLevel seventy"></div>
                 </div>
             </div>
+
             <div class="skillBox">
                 <p>Adobe Photoshop</p>
                 <p>70%</p>
                 <div class="skill">
-                    <div class="skillLevel seventy">
-
-                    </div>
+                    <div class="skillLevel seventy"></div>
                 </div>
             </div>
+
             <div class="skillBox">
                 <p>Adobe Premiere</p>
                 <p>80%</p>
                 <div class="skill">
-                    <div class="skillLevel eighty">
-
-                    </div>
+                    <div class="skillLevel eighty"></div>
                 </div>
             </div>
         </div>
+
     <script src="homepagescript.js"></script>
 </body>
 
