--- a/contact.html
+++ b/contact.html
@@ -46,35 +46,6 @@
         </ul>
     </div>
 
-<<<<<<< Updated upstream
-    <div class="main">
-        <div class="contactForm">
-            <form name="form" action=" " onsubmit="validateForm()">
-
-                <label for="fname">Förnamn</label>
-                <input type="text" id="fname" name="firstname">
-
-                <label for="lname">Efternamn</label>
-                <input type="text" id="lname" name="lastname">
-
-                <label for="email">Epost</label>
-                <input type="text" id="email" name="email">
-
-                <label for="phone">Telefonnummer</label>
-                <input type="text" id="phone" name="phone">
-
-                <label for="textArea">Ditt ärende</label>
-                <textarea id="textArea" name="textArea" placeholder="Skriv något om ditt ärende..."
-                    style="height:200px"></textarea>
-
-                <label for="contact">Hur vill du helst bli kontaktad?</label>
-                <select id="contact" name="contact">
-                    <option value="phone">Telefon</option>
-                    <option value="email">Epost</option>
-                </select>
-                <div class="alert">
-                    <input type="submit" value="Skicka">
-=======
 <div class="main">
 
     
@@ -85,7 +56,7 @@
 
             <label for="fname" >Förnamn</label>
             <input type="text" id="fname" name="firstname" class = "formInput">
-            <p> </p>
+            <p class = errorMessage> Bajs </p>
 
             <label for="lname" >Efternamn</label>
             <input type="text" id="lname" name="lastname" class = "formInput">
@@ -99,7 +70,6 @@
             <label for="textArea" >Ditt ärende</label>
             <textarea id="textArea" name="textArea" class = "formInput" placeholder="Skriv något om ditt ärende..."
                 style="height:200px"></textarea>
->>>>>>> Stashed changes
 
                 </div>
 
