--- a/about.html
+++ b/about.html
@@ -25,7 +25,9 @@
     <div class="header">
         <div id="wrapperIcon">
             <img id="menuIcon" src="list.png" alt="menu">
-            <!-- <img id="menuIcon" src="menuIcon.jpg" alt="menu"> -->
+        </div>
+        <div id="wrapperHome">
+            <img id="homeIcon" src="homeIcon.png" alt="home">
         </div>
     </div>
 
@@ -89,7 +91,7 @@
 
     <!-- Script ready(function(){}); -->
     <script src="aboutscript.js"></script>
-
+    <script src="scriptMenu.js"></script>
 </body>
 
 </html>
