--- a/anton.html
+++ b/anton.html
@@ -24,11 +24,14 @@
     <div class="header">
         <div id="wrapperIcon">
             <img id="menuIcon" src="list.png" alt="menu">
-            <!-- <img id="menuIcon" src="menuIcon.jpg" alt="menu"> -->
+        </div>
+        <div id="wrapperHome">
+            <img id="homeIcon" src="homeIcon.png" alt="home">
         </div>
     </div>
+    
 
-    <!-- Drop down Meny -->
+    <!-- Drop down Meny - Mobil -->
     <div id="wrapperDropdown" class="hidden">
         <ul id="dropdownUl">
             <li class="dropdownLi"><a class="dropdownA" href="grupparbete.html">Hem</a></li>
@@ -37,7 +40,17 @@
             <li class="dropdownLi"><a class="dropdownA" href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
-    <div class="main">
+
+    <!-- Drop down Meny - Dator -->
+    <div id="wrapperDropdownDesktop" class="hidden">
+        <ul id="dropdownUlDesktop">
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="grupparbete.html">Hem</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="contact.html">Kontakta oss</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="about.html">Om oss</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="portfolio.html">Portfolio</a></li>
+        </ul>
+    </div>
+    <div class="main personalMain">
 
         <div class="wrapperTitle">
             <h1 class="pageTitle">Anton Lyrberg</h1>
