--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,9 @@
     <div class="header">
         <div id="wrapperIcon">
             <img id="menuIcon" src="list.png" alt="menu">
-
+        </div>
+        <div id="wrapperHome">
+            <img id="homeIcon" src="homeIcon.png" alt="home">
         </div>
     </div>
     <div id="wrapperDropdown" class="hidden">
@@ -46,7 +48,6 @@
         </ul>
     </div>
 
-<<<<<<< HEAD
 <div class="main">
     <div class="contactForm">
         <form name="form" onsubmit="validateForm()">
@@ -73,35 +74,6 @@
             </select>
             <div class="alert">
                 <input type="submit" value="Skicka" id="submitButton">
-=======
-    <div class="main">
-        <div class="contactForm">
-            <form name="form" action=" " onsubmit="validateForm()">
-
-                <label for="fname">Förnamn</label>
-                <input type="text" id="fname" name="firstname">
-
-                <label for="lname">Efternamn</label>
-                <input type="text" id="lname" name="lastname">
-
-                <label for="email">Epost</label>
-                <input type="text" id="email" name="email">
-
-                <label for="phone">Telefonnummer</label>
-                <input type="text" id="phone" name="phone">
-
-                <label for="textArea">Ditt ärende</label>
-                <textarea id="textArea" name="textArea" placeholder="Skriv något om ditt ärende..."
-                    style="height:200px"></textarea>
-
-                <label for="contact">Hur vill du helst bli kontaktad?</label>
-                <select id="contact" name="contact">
-                    <option value="phone">Telefon</option>
-                    <option value="email">Epost</option>
-                </select>
-                <div class="alert">
-                    <input type="submit" value="Skicka">
->>>>>>> noppan
 
                 </div>
 
@@ -112,6 +84,7 @@
     </div>
 
     <script src="contactscript.js"></script>
+    <script src="scriptMenu.js"></script>
 </body>
 
 </html>
