--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,9 @@
     <div class="header">
         <div id="wrapperIcon">
             <img id="menuIcon" src="list.png" alt="menu">
-            <!-- <img id="menuIcon" src="menuIcon.jpg" alt="menu"> -->
-            </figure>
+        </div>
+        <div id="wrapperHome">
+            <img id="homeIcon" src="homeIcon.png" alt="home">
         </div>
     </div>
 
@@ -101,5 +102,5 @@
     </div>
 
     <script src="portfolioscript.js"></script>
-
+    <script src="scriptMenu.js"></script>
 </html>
