--- a/noel.html
+++ b/noel.html
@@ -25,9 +25,13 @@
         <div id="wrapperIcon">
             <img id="menuIcon" src="list.png" alt="menu">
         </div>
+        <div id="wrapperHome">
+            <img id="homeIcon" src="homeIcon.png" alt="home">
+        </div>
     </div>
+    
 
-    <!-- Drop down Meny -->
+    <!-- Drop down Meny - Mobil -->
     <div id="wrapperDropdown" class="hidden">
         <ul id="dropdownUl">
             <li class="dropdownLi"><a class="dropdownA" href="grupparbete.html">Hem</a></li>
@@ -37,7 +41,16 @@
         </ul>
     </div>
 
-    <div class="main">
+    <!-- Drop down Meny - Dator -->
+    <div id="wrapperDropdownDesktop" class="hidden">
+        <ul id="dropdownUlDesktop">
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="grupparbete.html">Hem</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="contact.html">Kontakta oss</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="about.html">Om oss</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="portfolio.html">Portfolio</a></li>
+        </ul>
+    </div>
+    <div class="main personalMain">
 
         <div class="wrapperTitle">
             <h1 class="pageTitle">Noel Lindgren</h1>
