--- a/contact.html
+++ b/contact.html
@@ -46,36 +46,38 @@
         </ul>
     </div>
 
-<div class="main">
+    <div class="main">
 
-    
 
-    <div class="contactForm">
-        
-        <form name="form" id = "contactUs" action=" " onsubmit="validateForm()">
 
-            <label for="fname" >Förnamn</label>
-            <input type="text" id="fname" name="firstname" class = "formInput">
-            <p class = errorMessage> Bajs </p>
+        <div class="contactForm">
 
-            <label for="lname" >Efternamn</label>
-            <input type="text" id="lname" name="lastname" class = "formInput">
-            <p> </p>
-            <label for="email" >Epost</label>
-            <input type="text" id="email" name="email" class = "formInput">
+            <form name="form" id="contactUs" action=" " onsubmit="validateForm()">
 
-            <label for="phone" >Telefonnummer</label>
-            <input type="text" id="phone" name="phone" class = "formInput">
+                <label for="fname">Förnamn</label>
+                <input type="text" id="fname" name="firstname" class="formInput">
+                <p class="errorMessage"> Bajs </p>
 
-            <label for="textArea" >Ditt ärende</label>
-            <textarea id="textArea" name="textArea" class = "formInput" placeholder="Skriv något om ditt ärende..."
-                style="height:200px"></textarea>
+                <label for="lname">Efternamn</label>
+                <input type="text" id="lname" name="lastname" class="formInput">
+                <p class="errorMessage"> Bajs </p>
 
-                </div>
+                <label for="email">Epost</label>
+                <input type="text" id="email" name="email" class="formInput">
+                <p class="errorMessage"> Bajs </p>
 
+                <label for="phone">Telefonnummer</label>
+                <input type="text" id="phone" name="phone" class="formInput">
+                <p class="errorMessage"> Bajs </p>
+
+                <label for="textArea">Ditt ärende</label>
+                <textarea id="textArea" name="textArea" class="formInput" placeholder="Skriv något om ditt ärende..."style="height:200px"></textarea>
+                <p class="errorMessage"> Bajs </p>
 
             </form>
+
         </div>
+    </div>
 
     </div>
 
