--- a/andre.html
+++ b/andre.html
@@ -60,13 +60,9 @@
             <img class="img" src="andre.jpg.JPEG" alt="andre">
         </div>
         <div class="textDiv">
-            <p class="personalText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in dolor quis orci
-                dapibus
-                elementum et ut lacus. Vestibulum eu tincidunt sem, at dignissim sem. Vivamus feugiat hendrerit erat,
-                eget
-                dapibus felis. Quisque sollicitudin pellentesque dolor ut gravida. Proin quis eleifend eros, non
-                eleifend
-                sapien. Nunc gravida enim nec felis.</p><br>
+            <p class="personalText">Hej och välkommen till min personliga sida! Jag heter André Rehnström och är 25 år gammal.
+                Jag kommer ursprungligen från Falun men bor numer i Örebro på grund av mina studier på Örebro Universitet.
+                .</p><br>
             <hr /><br>
         </div>
 
@@ -75,6 +71,14 @@
             <h2 class="skillH2">Kunskaper</h2>
             <div class="skillBox">
                 <p>Java</p>
+                <p>80%</p>
+                <div class="skill">
+                    <div class="skillLevel eighty"></div>
+                </div>
+            </div>
+
+            <div class="skillBox">
+                <p>HTML</p>
                 <p>40%</p>
                 <div class="skill">
                     <div class="skillLevel forty"></div>
@@ -82,18 +86,10 @@
             </div>
 
             <div class="skillBox">
-                <p>HTML</p>
-                <p>20%</p>
-                <div class="skill">
-                    <div class="skillLevel twenty"></div>
-                </div>
-            </div>
-
-            <div class="skillBox">
                 <p>CSS</p>
-                <p>30%</p>
+                <p>60%</p>
                 <div class="skill">
-                    <div class="skillLevel thirty"></div>
+                    <div class="skillLevel sixty"></div>
                 </div>
             </div>
 
@@ -107,20 +103,22 @@
 
             <div class="skillBox">
                 <p>Adobe Photoshop</p>
-                <p>70%</p>
+                <p>0%</p>
                 <div class="skill">
-                    <div class="skillLevel seventy"></div>
+                    <div class="skillLevel zero"></div>
                 </div>
             </div>
 
             <div class="skillBox">
                 <p>Adobe Premiere</p>
-                <p>80%</p>
+                <p>0%</p>
                 <div class="skill">
-                    <div class="skillLevel eighty"></div>
+                    <div class="skillLevel zero"></div>
                 </div>
             </div>
         </div>
+    </div>    
+    
 
         <script src="homepagescript.js"></script>
 </body>
