--- a/anton.html
+++ b/anton.html
@@ -60,13 +60,9 @@
             <img class="img" src="anton.jpg.JPEG" alt="anton">
         </div>
         <div class="textDiv">
-            <p class="personalText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in dolor quis orci
-                dapibus
-                elementum et ut lacus. Vestibulum eu tincidunt sem, at dignissim sem. Vivamus feugiat hendrerit erat,
-                eget
-                dapibus felis. Quisque sollicitudin pellentesque dolor ut gravida. Proin quis eleifend eros, non
-                eleifend
-                sapien. Nunc gravida enim nec felis.</p><br>
+            <p class="personalText">Hej och välkommen till min sida! Jag heter Anton Lyrberg och är
+                22 år gammal och kommer från Falun. Mina hobbys är att resa och mode.
+                Tack för att ni kikar förbi!</p><br>
             <hr /><br>
         </div>
 
