--- a/grupparbete.html
+++ b/grupparbete.html
@@ -64,7 +64,7 @@
             <h1 class="pageTitle">Välkommen till vårt arbete!</h1>
         </div>
         <div id="frontpagePic">
-            <img id="novahuset" src="novahuset.jpg">
+            <img id="novahuset" src="novahuset.jpg" alt="novahuset">
         </div>
 
         <!-- Text Information -->
