--- a/portfolio.html
+++ b/portfolio.html
@@ -64,9 +64,9 @@
                 <h3 class="postTitle">MIB-Projektet </h3>
                 <div class="gallery">
 
-                    <img class="slidePic slidePic1" src="mib1.jpg">
-                    <img class="slidePic slidePic1" src="mib2.png">
-                    <img class="slidePic slidePic1" src="mib3.png">
+                    <img class="slidePic slidePic1" src="mib1.jpg" alt=fel>
+                    <img class="slidePic slidePic1" src="mib2.png" alt=fel>
+                    <img class="slidePic slidePic1" src="mib3.png" alt=fel>
 
                 </div>
                 <button class="button" id="pause">Pause</button>
