--- a/victor.html
+++ b/victor.html
@@ -29,7 +29,7 @@
             <img id="homeIcon" src="homeIcon.png" alt="home">
         </div>
     </div>
-    
+
 
     <!-- Drop down Meny - Mobil -->
     <div id="wrapperDropdown" class="hidden">
@@ -60,64 +60,61 @@
             <img class="img" src="victor.jpg.JPEG" alt="victor">
         </div>
         <div class="textDiv">
-            <p class="personalText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in dolor quis orci
-                dapibus
-                elementum et ut lacus. Vestibulum eu tincidunt sem, at dignissim sem. Vivamus feugiat hendrerit erat,
-                eget
-                dapibus felis. Quisque sollicitudin pellentesque dolor ut gravida. Proin quis eleifend eros, non
-                eleifend
-                sapien. Nunc gravida enim nec felis.</p><br>
+            <p class="personalText">Hej och välkommen till min sida! Jag heter Victor Hultqvist och är
+                24 år gammal och kommer från Stockholm. Mina hobbys är fotboll, datorspel och padel.
+                Tack för att ni kikar förbi!</p><br>
             <hr /><br>
         </div>
-        
-       <!-- Färdigheter -->
-       <div class="skillsWrapper">
-        <h2 class="skillH2">Kunskaper</h2>
-        <div class="skillBox">
-            <p>Java</p>
-            <p>40%</p>
-            <div class="skill">
-                <div class="skillLevel forty"></div>
-            </div>
-        </div>
 
-        <div class="skillBox">
-            <p>HTML</p>
-            <p>20%</p>
-            <div class="skill">
-                <div class="skillLevel twenty"></div>
+        <!-- Färdigheter -->
+        <div class="skillsWrapper">
+            <h2 class="skillH2">Kunskaper</h2>
+            <div class="skillBox">
+                <p>Java</p>
+                <p>40%</p>
+                <div class="skill">
+                    <div class="skillLevel forty"></div>
+                </div>
             </div>
-        </div>
 
-        <div class="skillBox">
-            <p>CSS</p>
-            <p>30%</p>
-            <div class="skill">
-                <div class="skillLevel thirty"></div>
+            <div class="skillBox">
+                <p>HTML</p>
+                <p>50%</p>
+                <div class="skill">
+                    <div class="skillLevel fifty"></div>
+                </div>
             </div>
-        </div>
 
-        <div class="skillBox">
-            <p>MySQL</p>
-            <p>70%</p>
-            <div class="skill">
-                <div class="skillLevel seventy"></div>
+            <div class="skillBox">
+                <p>CSS</p>
+                <p>60%</p>
+                <div class="skill">
+                    <div class="skillLevel sixty"></div>
+                </div>
             </div>
-        </div>
 
-        <div class="skillBox">
-            <p>Adobe Photoshop</p>
-            <p>70%</p>
-            <div class="skill">
-                <div class="skillLevel seventy"></div>
+            <div class="skillBox">
+                <p>MySQL</p>
+                <p>70%</p>
+                <div class="skill">
+                    <div class="skillLevel seventy"></div>
+                </div>
             </div>
-        </div>
 
-        <div class="skillBox">
-            <p>Adobe Premiere</p>
-            <p>80%</p>
-            <div class="skill">
-                <div class="skillLevel eighty"></div>
+            <div class="skillBox">
+                <p>Adobe Photoshop</p>
+                <p>0%</p>
+                <div class="skill">
+                    <div class="skillLevel zero"></div>
+                </div>
+            </div>
+
+            <div class="skillBox">
+                <p>Adobe Premiere</p>
+                <p>0%</p>
+                <div class="skill">
+                    <div class="skillLevel zero"></div>
+                </div>
             </div>
         </div>
     </div>
