--- a/noel.html
+++ b/noel.html
@@ -29,7 +29,7 @@
             <img id="homeIcon" src="homeIcon.png" alt="home">
         </div>
     </div>
-    
+
 
     <!-- Drop down Meny - Mobil -->
     <div id="wrapperDropdown" class="hidden">
@@ -60,37 +60,42 @@
             <img class="img" src="noel.jpg.JPEG" alt="noel">
         </div>
         <div class="textDiv">
-            <p class="personalText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in dolor quis orci
-                dapibus
-                elementum et ut lacus. Vestibulum eu tincidunt sem, at dignissim sem. Vivamus feugiat hendrerit erat,
-                eget
-                dapibus felis. Quisque sollicitudin pellentesque dolor ut gravida. Proin quis eleifend eros, non
-                eleifend
-                sapien. Nunc gravida enim nec felis.</p><br>
+            <p class="personalText">Hej och välkommen till min sida! Jag heter Noel Lindgren och är
+            22 år gammal och kommer från Falun. Mina hobbys är fotboll och att spela datorspel.
+            Tack för att ni kikar förbi!
+            </p><br>
             <hr /><br>
         </div>
-        
+
         <!-- Färdigheter -->
         <div class="skillsWrapper">
             <h2 class="skillH2">Kunskaper</h2>
             <div class="skillBox">
                 <p>Java</p>
-                <p>40%</p>
+                <p>60%</p>
                 <div class="skill">
-                    <div class="skillLevel forty"></div>
+                    <div class="skillLevel sixty"></div>
                 </div>
             </div>
 
             <div class="skillBox">
                 <p>HTML</p>
-                <p>20%</p>
+                <p>85%</p>
                 <div class="skill">
-                    <div class="skillLevel twenty"></div>
+                    <div class="skillLevel eightyfive"></div>
                 </div>
             </div>
 
             <div class="skillBox">
                 <p>CSS</p>
+                <p>90%</p>
+                <div class="skill">
+                    <div class="skillLevel ninety"></div>
+                </div>
+            </div>
+
+            <div class="skillBox">
+                <p>MySQL</p>
                 <p>30%</p>
                 <div class="skill">
                     <div class="skillLevel thirty"></div>
@@ -98,29 +103,22 @@
             </div>
 
             <div class="skillBox">
-                <p>MySQL</p>
-                <p>70%</p>
-                <div class="skill">
-                    <div class="skillLevel seventy"></div>
-                </div>
-            </div>
-
-            <div class="skillBox">
                 <p>Adobe Photoshop</p>
-                <p>70%</p>
+                <p>95%</p>
                 <div class="skill">
-                    <div class="skillLevel seventy"></div>
+                    <div class="skillLevel ninetyfive"></div>
                 </div>
             </div>
 
             <div class="skillBox">
                 <p>Adobe Premiere</p>
-                <p>80%</p>
+                <p>0%</p>
                 <div class="skill">
-                    <div class="skillLevel eighty"></div>
+                    <div class="skillLevel zero"></div>
                 </div>
             </div>
         </div>
+    </div>
 
     <script src="homepagescript.js"></script>
 </body>
