--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 
         <div class="contactForm">
 
-            <form name="form" id ="contactUs" onsubmit="validateForm()">
+            <form name="form" id ="contactUs">
 
                 
                 <p id ="firstnameText" class="errorMessage">  </p>
@@ -87,7 +87,7 @@
                 </select>
 
                 <div class="alert">
-                    <input type="submit" value="Skicka" id = "button" class ="hideButton">
+                    <input type="submit" value="Skicka" id = "button" class ="submitButton">
 
                 </div>
 
