--- a/andre.html
+++ b/andre.html
@@ -61,8 +61,9 @@
         </div>
         <div class="textDiv">
             <p class="personalText">Hej och välkommen till min personliga sida! Jag heter André Rehnström och är 25 år gammal.
-                Jag kommer ursprungligen från Falun men bor numer i Örebro på grund av mina studier på Örebro Universitet.
-                .</p><br>
+                Jag kommer ursprungligen från Falun men bor numera i Örebro på grund av mina studier på Örebro Universitet.
+                Mina intressen är att spela CS och överdosera Nocco.
+                </p><br>
             <hr /><br>
         </div>
 
@@ -102,18 +103,18 @@
             </div>
 
             <div class="skillBox">
-                <p>Adobe Photoshop</p>
-                <p>0%</p>
+                <p>Dricka Nocco</p>
+                <p>100%</p>
                 <div class="skill">
-                    <div class="skillLevel zero"></div>
+                    <div class="skillLevel hundred"></div>
                 </div>
             </div>
 
             <div class="skillBox">
-                <p>Adobe Premiere</p>
-                <p>0%</p>
+                <p>Counter-Strike</p>
+                <p>98%</p>
                 <div class="skill">
-                    <div class="skillLevel zero"></div>
+                    <div class="skillLevel ninetyeight"></div>
                 </div>
             </div>
         </div>
