--- a/noel.html
+++ b/noel.html
@@ -61,7 +61,8 @@
         </div>
         <div class="textDiv">
             <p class="personalText">Hej och välkommen till min sida! Jag heter Noel Lindgren och är
-            22 år gammal och kommer från Falun. Mina hobbys är fotboll och att spela datorspel.
+            22 år gammal och kommer från Falun. Mina hobbys är engelsk fotboll och Magic the Gathering.
+            Min senaste prestation är ranken Mythic på MTG-Arena.
             Tack för att ni kikar förbi!
             </p><br>
             <hr /><br>
@@ -111,10 +112,10 @@
             </div>
 
             <div class="skillBox">
-                <p>Adobe Premiere</p>
-                <p>0%</p>
+                <p>MTG</p>
+                <p>73%</p>
                 <div class="skill">
-                    <div class="skillLevel zero"></div>
+                    <div class="skillLevel seventythree"></div>
                 </div>
             </div>
         </div>
