--- a/victor.html
+++ b/victor.html
@@ -102,18 +102,18 @@
             </div>
 
             <div class="skillBox">
-                <p>Adobe Photoshop</p>
-                <p>0%</p>
+                <p>Faderliga färdigheter</p>
+                <p>20%</p>
                 <div class="skill">
-                    <div class="skillLevel zero"></div>
+                    <div class="skillLevel twenty"></div>
                 </div>
             </div>
 
             <div class="skillBox">
-                <p>Adobe Premiere</p>
-                <p>0%</p>
+                <p>Padel</p>
+                <p>95%</p>
                 <div class="skill">
-                    <div class="skillLevel zero"></div>
+                    <div class="skillLevel ninetyfive"></div>
                 </div>
             </div>
         </div>
