--- a/andre.html
+++ b/andre.html
@@ -56,7 +56,7 @@
             <h1 class="pageTitle">André Rehnström</h1>
         </div>
 
-        <div class="imgDiv">
+        <div>
             <img class="img" src="andre.jpg.JPEG" alt="andre">
         </div>
         <div class="textDiv">
