--- a/anton.html
+++ b/anton.html
@@ -56,7 +56,7 @@
             <h1 class="pageTitle">Anton Lyrberg</h1>
         </div>
 
-        <div class="imgDiv">
+        <div>
             <img class="img" src="anton.jpg.JPEG" alt="anton">
         </div>
         <div class="textDiv">
