--- a/grupparbete.html
+++ b/grupparbete.html
@@ -34,7 +34,7 @@
             <img id="homeIcon" src="homeIcon.png" alt="home">
         </div>
     </div>
-    
+
 
     <!-- Drop down Meny - Mobil -->
     <div id="wrapperDropdown" class="hidden">
@@ -63,19 +63,28 @@
         <div class="wrapperTitle">
             <h1 class="pageTitle">Välkommen till vårt arbete!</h1>
         </div>
-        <div id="frontpagePic">
+        <div id="novahusetDiv">
             <img id="novahuset" src="novahuset.jpg" alt="novahuset">
         </div>
 
+
         <!-- Text Information -->
         <div id="textDiv">
-            <p id="frontpageText">
+            <p class="mobileText">
                 Välkommen till vår hemsida! Vänligen använd menyn högst upp för att navigera
                 runt.<br><br>Hälsningar,<br>
                 André, Anton, Noel och Victor.
             </p>
+            <p class="desktopText">
+                Välkommen till vår hemsida! Vänligen använd menyn till vänster för att navigera
+                runt.<br><br>Hälsningar,<br>
+                André, Anton, Noel och Victor.
+            </p>
         </div>
-
+        <!-- Sesam bild -->
+        <div>
+            <img id="sesamPic" src="sesam.jpg" alt="sesamlogga">
+        </div>
     </div>
 
     <script src="scriptMenu.js"></script>
