--- a/noel.html
+++ b/noel.html
@@ -56,7 +56,7 @@
             <h1 class="pageTitle">Noel Lindgren</h1>
         </div>
 
-        <div class="imgDiv">
+        <div>
             <img class="img" src="noel.jpg.JPEG" alt="noel">
         </div>
         <div class="textDiv">
