--- a/victor.html
+++ b/victor.html
@@ -56,7 +56,7 @@
             <h1 class="pageTitle">Victor Hultqvist</h1>
         </div>
 
-        <div class="imgDiv">
+        <div>
             <img class="img" src="victor.jpg.JPEG" alt="victor">
         </div>
         <div class="textDiv">
